# GLoop

./: .gitignore  CMakeLists.txt  README.md  compile.sh
GRegister/: GRegister.hpp  IdManager.hpp  SparseSet.hpp
ecm/: Register.hpp  SparseSet.hpp
src/: CMakeLists.txt  CMakeSources.cmake  GHeaders.hpp  GLoop.cpp  GLoop.hpp  ISystem.hpp  IdManager.hpp  Loader.hpp  Movement.cpp  StageManager.hpp  StageSystem.hpp  System.hpp  ThreadPool.hpp
src/ECM/: CMakeLists.txt  Family.hpp  Register.hpp
src/tools/: Loader.hpp  ThreadPool.hpp
test/: CMakeLists.txt  config.txt  main.cpp
test/Entity/: PlayerCreator.hpp
test/Systems/: CMakeLists.txt  Collision.hpp  Movement.hpp
test/systemTest/: MovementSystem.hpp
